<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chairall"
    tools:context="com.example.sonyshah.spacewood.profile">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/Textview10"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/textView10"
        android:layout_below="@+id/textView20"
        android:layout_marginTop="26dp"
        android:background="#ff8800"
        android:onClick="profile"
        android:text="@string/button4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:paddingStart="20dp"
        android:text="@string/Textview12"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="14dp"
        android:text="@string/Textview15"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/editText14"
        android:layout_alignBottom="@+id/editText14"
        android:layout_alignEnd="@+id/textView15"
        android:text="@string/Textview16"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/textView16"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="10dp"
        android:paddingStart="40dp"
        android:text="@string/Textview17"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="15dp"
        android:paddingStart="30dp"
        android:text="@string/Textview18"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/textView16"
        android:layout_alignTop="@+id/editText17"
        android:text="@string/Textview19"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/editText18"
        android:layout_alignBottom="@+id/editText18"
        android:layout_alignStart="@+id/textView19"
        android:text="@string/Textview20"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

   <EditText
       android:id="@+id/editText9"
       android:layout_width="wrap_content"
       android:layout_height="35dp"
       android:layout_above="@+id/textView15"
       android:layout_marginEnd="5dp"
       android:layout_toEndOf="@+id/textView15"
       android:alpha="0.9"
       android:background="#ffffff"
       android:ems="12"
       android:hint="@string/editText9"
       android:inputType="textPersonName"
       android:paddingStart="10dp" />

   <EditText
       android:id="@+id/editText10"
       android:layout_width="wrap_content"
       android:layout_height="35dp"
       android:layout_alignTop="@+id/textView15"
       android:layout_marginEnd="5dp"
       android:layout_toEndOf="@+id/textView15"
       android:alpha="0.9"
       android:background="#ffffff"
       android:ems="12"
       android:hint="@string/editText10"
       android:inputType="textEmailAddress"
       android:paddingStart="10dp" />

   <EditText
       android:id="@+id/editText14"
       android:layout_width="wrap_content"
       android:layout_height="35dp"
       android:layout_alignStart="@+id/editText10"
       android:layout_below="@+id/editText10"
       android:layout_marginEnd="5dp"
       android:layout_marginTop="12dp"
       android:alpha="0.9"
       android:background="#ffffff"
       android:ems="12"
       android:hint="@string/editText14"
       android:inputType="textPostalAddress"
       android:paddingStart="10dp" />

   <EditText
       android:id="@+id/editText15"
       android:layout_width="wrap_content"
       android:layout_height="35dp"
       android:layout_alignStart="@+id/editText14"
       android:layout_alignTop="@+id/textView17"
       android:layout_marginEnd="5dp"
       android:layout_marginTop="2dp"
       android:alpha="0.9"
       android:background="#ffffff"
       android:ems="12"
       android:inputType="textPersonName"
       android:text="" />

   <EditText
       android:id="@+id/editText16"
       android:layout_width="wrap_content"
       android:layout_height="35dp"
       android:layout_alignStart="@+id/editText15"
       android:layout_below="@+id/editText15"
       android:layout_marginEnd="5dp"
       android:layout_marginTop="12dp"
       android:alpha="0.9"
       android:background="#ffffff"
       android:ems="12"
       android:inputType="textPersonName"
       android:text="" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/editText16"
        android:layout_below="@+id/textView18"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="13dp"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText17"
        android:inputType="textPersonName"
        android:maxLength="6"
        android:text="" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/textView19"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/textView12"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="12"
        android:inputType="phone"
        android:maxLength="10" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />


</RelativeLayout>
