<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chairall"
    tools:context="com.example.sonyshah.spacewood.contactus">



    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/blacklogo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/Textview5"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:onClick="callsony"
        android:text="@string/Textview6"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:paddingTop="1dp"
        android:text="@string/Textview7"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingStart="50dp"
        android:text="@string/Textview8"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:onClick="callspacewood"
        android:text="@string/Textview9"
        android:textColor="#ffffff"
        android:textSize="22dp"
        android:textStyle="bold|italic" />




</RelativeLayout>
