<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chairall"
    tools:context="com.example.sonyshah.spacewood.feedback">


    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText11"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="82dp"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="14"
        android:hint="@string/editText8"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_below="@+id/editText8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="14"
        android:gravity="top"
        android:hint="@string/editText11"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="10dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText11"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="14"
        android:hint="@string/editText12"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:text=""
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText12"
        android:layout_centerHorizontal="true"
        android:alpha="0.9"
        android:background="#ffffff"
        android:ems="14"
        android:gravity="top"
        android:hint="@string/editText13"
        android:inputType="textMultiLine"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:alpha="0.95"
        android:background="@android:color/holo_orange_dark"
        android:ems="10"
        android:onClick="sub"
        android:text="Submit"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/blacklogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/Textview"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:text="@string/Textview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText8"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text="@string/Textview1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />



</RelativeLayout>
